new photos added

--- a/style.css
+++ b/style.css
@@ -409,7 +409,7 @@ ol.carousel-indicators li.active div{
 .clear{    clear: both;}
 .jain_container{ margin:0px; padding:0px;}
 /*.jain_container .medias{margin-top: 50px;}*/
-.jain_container .medias ul{ padding:0px; margin:0px; }
+.jain_container .medias ul{ paddingg:0px; margin:0px; }
 .jain_container .medias ul li{  display:inline;  padding:7px 0px;}
  .jain_container .medias i {    font-size: 18px;}
 .jain_container  .navbar-brand{ height:inherit;}
