--- a/style.css
+++ b/style.css
@@ -790,7 +790,7 @@ a.socialIcon:hover, .socialHoverClass {
 
 
 
-@media only screen and (max-width: 600px) {
+@media handheld, screen and (max-width: 600px) {
     .jain_container .nav>li>a {
         font-size: 20px;
         padding: 5px;
