--- a/style.css
+++ b/style.css
@@ -684,7 +684,7 @@ body {
     color: #fcc500;
     font-size: 85px;
     text-align: center;
-    margin-right: 50px;
+    margin-right: 60px;
 }
 
 #subtitle {
@@ -696,8 +696,103 @@ body {
     letter-spacing: 10px;
 }
 
+@media only screen and (max-width: 930px) {
+    body {
+        width:400px!important;
+        padding:0;
+    }
 
+    .jain_container .nav>li>a {
+        font-size: 20px;
+        padding: 5px;
+        margin: 0px;
+    }
+    .medias ul li a {
+        margin-top: 0px;
+        display: none;
+    }
 
+    .classus {
+        display: none;
+    }
+    /*.carousel-slide {*/
+        /*max-width: 400px;*/
+    /*}*/
+
+    #image1 {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    #image2 {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    #image3 {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    #image4 {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    #image5 {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    #image6 {
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    ol.carousel-indicators li{
+        display: none;
+    }
+
+    /*ol.carousel-indicators li.active{*/
+        /*width: 10px;*/
+        /*height: 10px;*/
+        /*border-color: transparent;*/
+        /*background-color: transparent;*/
+    /*}*/
+
+    .carousel {
+        height: 100%;
+        width: 100%;
+    }
+
+    .fill {
+        margin-left: 40px;
+        height: 100p
+    }
+
+    #title {
+        /*font-family: 'Oleo Script', cursive;*/
+        font-family: 'Teko', sans-serif;
+        color: #fcc500;
+        font-size: 28px;
+        text-align: center;
+        margin-right: 50px;
+    }
+
+    #subtitle {
+        /*font-family: 'Teko', sans-serif;*/
+        font-family: 'Oleo Script', cursive;
+        color: #fff;
+        text-align: center;
+        font-size: 15px;
+        letter-spacing: 10px;
+    }
 }
 
 /*SPINNING SOCIAL MEDIA ICONS*/
@@ -790,96 +885,3 @@ a.socialIcon:hover, .socialHoverClass {
 
 
 
-@media only screen and (max-width:600px) {
-    .jain_container .nav > li > a {
-        font-size: 20px;
-        padding: 5px;
-        margin: 0px;
-    }
-
-    .medias ul li a {
-        margin-top: 0px;
-        display: none;
-    }
-
-    .classus {
-        display: none;
-    }
-
-    /*.carousel-slide {*/
-    /*max-width: 400px;*/
-    /*}*/
-    #image1 {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    #image2 {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    #image3 {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    #image4 {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    #image5 {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    #image6 {
-        background-size: contain;
-        background-repeat: no-repeat;
-        background-position: center;
-    }
-
-    ol.carousel-indicators li {
-        display: none;
-    }
-
-    /*ol.carousel-indicators li.active{*/
-    /*width: 10px;*/
-    /*height: 10px;*/
-    /*border-color: transparent;*/
-    /*background-color: transparent;*/
-    /*}*/
-    .carousel {
-        height: 100%;
-        width: 100%;
-    }
-
-    .fill {
-        margin-left: 40px;
-        height: 300px;
-    }
-
-    #title {
-        /*font-family: 'Oleo Script', cursive;*/
-        font-family: 'Teko', sans-serif;
-        color: #fcc500;
-        font-size: 40px;
-        text-align: center;
-        margin-left: 30px;
-    }
-
-    #subtitle {
-        /*font-family: 'Teko', sans-serif;*/
-        font-family: 'Oleo Script', cursive;
-        color: #fff;
-        text-align: center;
-        font-size: 15px;
-        letter-spacing: 10px;
-    }
-}
