--- a/style.css
+++ b/style.css
@@ -697,10 +697,10 @@ body {
 }
 
 @media only screen and (max-width: 930px) {
-    body {
-        width:400px!important;
-        padding:0;
-    }
+    /*body {*/
+        /*width:400px!important;*/
+        /*padding:0;*/
+    /*}*/
 
     .jain_container .nav>li>a {
         font-size: 20px;
