--- a/style.css
+++ b/style.css
@@ -781,7 +781,7 @@ body {
         color: #fcc500;
         font-size: 28px;
         text-align: center;
-        /*margin-right: 50px;*/
+        margin-left: 30px;
     }
 
     #subtitle {
