--- a/style.css
+++ b/style.css
@@ -699,6 +699,7 @@ body {
 @media only screen and (max-width: 930px) {
     body{
         overflow-x:hidden;
+        background-size: cover;
     }
 
     .jain_container .nav>li>a {
