--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@ li {
     text-align: center;
 }
 
+ul {
+    margin-bottom: 0px;
+}
+
 
 
 
@@ -696,10 +700,11 @@ body {
     letter-spacing: 10px;
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1024px) {
     body{
         overflow-x:hidden;
         background-size: cover;
+        background-repeat: no-repeat;
     }
 
     .jain_container .nav>li>a {
